@@ -1,3 +1,9 @@
+2018-04-03  Uros Bizjak  <ubizjak@gmail.com>
+
+	* config/i386/i386.c (emit_i387_cw_initialization): Always use logic
+	instructions when changing rounding bits to preserve precision bits
+	in the x87 control word.
+
 2018-04-03  Martin Liska  <mliska@suse.cz>
 
 	PR tree-optimization/82491
